# FI-SPVM

./: .gitignore  ADMMOptimizer.cpp  ADMMOptimizer.h  CMakeLists.txt  CMakePresets.json  DictionaryGenerator.h  KernelFunction.cpp  KernelFunction.h  Logger.cpp  Logger.h  ParamSelector.cpp  ParamSelector.h  README.md  SpectrumCompletion.cpp  SpectrumCompletion.h  config.json  trSPVSolver.cpp  vcpkg.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml
apps/trspv_cli/: main.cpp
cmake/: vcpkg-toolchain.cmake
docs/: architecture.md  config-reference.md  quickstart.md
examples/basic_run/: config.json  input.csv
examples/user_case/: config.json  input.csv
lib/: ADMMOptimizer.cpp  ADMMOptimizer.h  ComponentAnalysis.cpp  ComponentAnalysis.h  Config.cpp  Config.h  DictionaryGenerator.cpp  KernelFunction.cpp  KernelFunction.h  Logger.cpp  ParamSelector.cpp  ParamSelector.h  PeakSeedDetector.cpp  PeakSeedDetector.h  ResultWriter.cpp  ResultWriter.h  Solver2D.cpp  Solver2D.h  SpectrumCompletion.cpp  SpectrumCompletion.h  SpectrumData.cpp  SpectrumData.h  Utils.cpp  Utils.h
scripts/: bootstrap-vcpkg.ps1  bootstrap-vcpkg.sh  build-test.ps1  build-test.sh  dev-check-run.ps1
src/: SolverApp.cpp  SolverApp.h  trSPVSolver.cpp
task-hub/: README.md
task-hub/2026-04-02_v1.0/: 00_INDEX_2026-04-02_v1.0.md  01_PR1_entry_unification_2026-04-02_v1.0.md  02_PR2_component_model_dedup_2026-04-02_v1.0.md  03_PR3_config_standardization_2026-04-02_v1.0.md  04_PR4_output_io_layering_2026-04-02_v1.0.md  05_PR5_tests_docs_release_2026-04-02_v1.0.md  LOG_PR1-ENTRY-UNIFICATION_2026-04-03.md  LOG_PR4-OUTPUT-IO-LAYERING_2026-04-03.md  LOG_PR5-TESTS-DOCS-RELEASE_2026-04-03.md  LOG_TEMPLATE_2026-04-02_v1.0.md  README_2026-04-02_v1.0.md
tests/: cli_smoke_test.cpp  completion_tests.cpp  config_tests.cpp  loader_tests.cpp  solver_tests.cpp
tests/fixtures/: smoke_config.json
